configs/pihole/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole
  namespace: dns
  annotations:
    external-dns.alpha.kubernetes.io/hostname: dns.home
spec:
  selector:
    app: pihole
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  - name: dns-tcp
    port: 53
    targetPort: 53
    protocol: TCP
  - name: dns-udp
    port: 53
    targetPort: 53
    protocol: UDP
  type: LoadBalancer
  # Using a fixed IP from your MetalLB pool
  loadBalancerIP: 192.168.71.53  # IP from your MetalLB range 192.168.71.10-192.168.71.250
